taking a break, jQuery is not easily merging here

--- a/myWebsite/src/app/app.component.html
+++ b/myWebsite/src/app/app.component.html
@@ -1,4 +1,26 @@
 	
+   <body data-spy="scroll" data-offset="0" data-target="#theMenu">
+		
+	<!-- Menu -->
+	<nav class="menu" id="theMenu">
+		<div class="menu-wrap">
+			<h1 class="logo"><a href="index.html#home">Minimal</a></h1>
+			<i class="icon-remove menu-close"></i>
+			<a href="#home" class="smoothScroll">Home</a>
+			<a href="#about" class="smoothScroll">About</a>
+			<a href="#portfolio" class="smoothScroll">Portfolio</a>
+			<a href="#contact" class="smoothScroll">Contact</a>
+			<a href="https://www.linkedin.com/in/joseph-barkate"><i class="icon-linkedin"></i></a>
+			<a href="https://github.com/JosephBarkate"><i class="icon-github"></i></a>
+      <a href="#"><i class="icon-bitcoin"></i></a>
+			<a href="mailto:josephbarkate@gmail.com?subject=Came accross your website
+      &body Hey Joe! Came across your website and I would like a copy of your resume"><i class="icon-envelope"></i></a>
+		</div>
+		
+		<!-- Menu button -->
+		<div id="menuToggle"><i class="icon-reorder"></i></div>
+	</nav>
+
   <!-- ========== HEADER SECTION ========== -->
 	<section id="home" name="home"></section>
 	<div id="headerwrap">
@@ -86,7 +108,7 @@
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 				
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>Some Avenue, 987<br/>Madrid, Spain<br/>(817) 791-6352</p>
+					<p>Austin, Texas<br/>United States<br/>(817) 791-6352</p>
 					<p>JosephBarkate@gmail.com</p>
 					<p><button type="button" class="btn btn-warning">YEAH! CONTACT ME NOW!</button></p>
 				</div>
@@ -94,3 +116,11 @@
 		</div>
 	</div>
 
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+
+	<script src="../assets/js/classie.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/smoothscroll.js"></script>
+	<script src="../assets/js/main.js"></script>
